fix : content in card footer not visible

--- a/styles.css
+++ b/styles.css
@@ -277,9 +277,9 @@
 }
 
 .card:hover .card-footer-parent {
-    background: rgba(255, 255, 255, 0.25);
-    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-    backdrop-filter: blur(4px);
+    background-color: var(--background-primary);
+    box-shadow: 0 8px 32px 0 var(--caret-color);
+    /* backdrop-filter: blur(5px); */
 }
 
 .card-footer {
